feat: membuat order dan historis order untuk final project
